--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <!-- 인용구 섹션 -->
         <div class="quote-section">
             <p>“최고의 불꽃은 최악의 상황일 때 가장 밝게 타오른 다고 하지”</p>
+            <div class="quote-author"><p>-소피-</p></div>
         </div>
         <div class="description">
           <!-- 설명 -->
