--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <div class="champion-cards">
             <!-- 첫 번째 카드 -->
             <div class="champion-card">
-                <a href="https://example.com/character1" target="_blank">
-                    <img src="하울5.jpg" alt="아펠리오스">
+                <a href="https://hyunjin0101.github.io/haul-haul" target="_blank">
+                    <img src="하울5.jpg" alt="하울">
                     <div class="character-details">
                         <div class="character-name">하울</div>
                         <div class="character-role">하울의 움직이는 성</div>
@@ -95,8 +95,8 @@
     
             <!-- 두 번째 카드 -->
             <div class="champion-card">
-                <a href="https://example.com/character2" target="_blank">
-                    <img src="흰5.jpg" alt="알리스타">
+                <a href="https://hyunjin0101.github.io/haul-white" target="_blank">
+                    <img src="흰5.jpg" alt="흰">
                     <div class="character-details">
                         <div class="character-name">흰</div>
                         <div class="character-role">하울의 움직이는 성</div>
